--- a/AspMVCECommerce/Views/Home/Index.cshtml
+++ b/AspMVCECommerce/Views/Home/Index.cshtml
@@ -230,8 +230,15 @@
                                                 if (Request.IsAuthenticated)
                                                 {
 
-
-                                                    <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    if (User.IsInRole("Customer"))
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
+                                                    @*<button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>*@
 
                                                 }
                                                 else
@@ -414,9 +421,16 @@
                                             {
                                                 if (Request.IsAuthenticated)
                                                 {
+                                                    if (User.IsInRole("Customer"))
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
 
-
-                                                    <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    @*<button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>*@
 
                                                 }
                                                 else
@@ -600,9 +614,14 @@
                                                 if (Request.IsAuthenticated)
                                                 {
 
-
-                                                    <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
-
+                                                    if (User.IsInRole("Customer"))
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
                                                 }
                                                 else
                                                 {
@@ -783,8 +802,16 @@
                                                 if (Request.IsAuthenticated)
                                                 {
 
+                                                    if (User.IsInRole("Customer"))
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
 
-                                                    <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    @*<button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>*@
 
                                                 }
                                                 else
@@ -958,8 +985,17 @@
                                                 if (Request.IsAuthenticated)
                                                 {
 
+                                                    if (User.IsInRole("Customer"))
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
 
-                                                    <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+
+                                                    @*<button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>*@
 
                                                 }
                                                 else
@@ -1130,9 +1166,17 @@
                                             {
                                                 if (Request.IsAuthenticated)
                                                 {
+                                                    if (User.IsInRole("Customer"))
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
 
 
-                                                    <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    @*<button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>*@
 
                                                 }
                                                 else
@@ -1394,8 +1438,15 @@
                                                 if (Request.IsAuthenticated)
                                                 {
 
-
-                                                    <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    if (User.IsInRole("Customer"))
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
+                                                    @*<button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>*@
 
                                                 }
                                                 else
@@ -1574,9 +1625,16 @@
                                             {
                                                 if (Request.IsAuthenticated)
                                                 {
+                                                    if (User.IsInRole("Customer"))
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
 
-
-                                                    <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    @*<button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>*@
 
                                                 }
                                                 else
@@ -1749,9 +1807,16 @@
                                             {
                                                 if (Request.IsAuthenticated)
                                                 {
+                                                    if (User.IsInRole("Customer"))
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
 
-
-                                                    <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    @*<button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>*@
 
                                                 }
                                                 else
@@ -1925,9 +1990,16 @@
                                             {
                                                 if (Request.IsAuthenticated)
                                                 {
+                                                    if (User.IsInRole("Customer"))
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
 
-
-                                                    <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    @*<button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>*@
 
                                                 }
                                                 else
@@ -2099,9 +2171,16 @@
                                             {
                                                 if (Request.IsAuthenticated)
                                                 {
+                                                    if (User.IsInRole("Customer"))
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
 
-
-                                                    <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    @*<button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>*@
 
                                                 }
                                                 else
@@ -2273,9 +2352,16 @@
                                             {
                                                 if (Request.IsAuthenticated)
                                                 {
+                                                    if (User.IsInRole("Customer"))
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button class="add-to-cart-btn" onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    }
 
-
-                                                    <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                                    @*<button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>*@
 
                                                 }
                                                 else
