--- a/AspMVCECommerce/Views/Home/Store.cshtml
+++ b/AspMVCECommerce/Views/Home/Store.cshtml
@@ -545,7 +545,15 @@
                                         {
 
 
-                                            <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                            if (User.IsInRole("Customer"))
+                                            {
+                                                <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                            }
+                                            else
+                                            {
+                                                <button class="add-to-cart-btn" onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                            }
+                                            @*<button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>*@
 
                                         }
                                         else
