--- a/AspMVCECommerce/Views/Home/Product.cshtml
+++ b/AspMVCECommerce/Views/Home/Product.cshtml
@@ -167,7 +167,16 @@
                         {
                             if (Request.IsAuthenticated)
                             {
-                                <button class="add-to-cart-btn" onclick="AddToCart(event);"><i class="fa fa-shopping-cart"></i> add to cart</button>
+
+                                if (User.IsInRole("Customer"))
+                                {
+                                    <button class="add-to-cart-btn" onclick="AddToCart(event);"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                 
+                                }
+                                else
+                                {
+                                    <button class="add-to-cart-btn" onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                }
 
                             }
                             else
@@ -641,9 +650,16 @@
                                 {
                                     if (Request.IsAuthenticated)
                                     {
+                                        if (User.IsInRole("Customer"))
+                                        {
+                                            <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                        }
+                                        else
+                                        {
+                                            <button class="add-to-cart-btn" onclick="location.href='/Account/Login'"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                        }
 
-
-                                        <button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                        @*<button class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>*@
 
                                     }
                                     else
