change layout page of manage account, add link to to footer services links

--- a/AspMVCECommerce/Views/Manage/ChangePassword.cshtml
+++ b/AspMVCECommerce/Views/Manage/ChangePassword.cshtml
@@ -1,44 +1,25 @@
 ﻿@model AspMVCECommerce.Models.ChangePasswordViewModel
+
 @{
     ViewBag.Title = "Change Password";
-    Layout = "~/Views/Shared/_SellerLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
 <!-- BREADCRUMB -->
-<div id="breadcrumb" class="section breadcrumbx" style="display: flex;">
-    <div class="container">
-
-        <div class="row pull-left" style="width: 230px;">
-            <div class="col-md-12">
-                <ul class="breadcrumb-tree">
-                    <li> <a href="#" style="font-size: 16px; font-weight: bold">Manage Account</a></li>
-
-                </ul>
-
-            </div>
-        </div>
-
-    </div>
+<div id="breadcrumb" class="section">
     <!-- container -->
-    <div class="container" style="margin-left:200px;">
+    <div class="container">
         <!-- row -->
         <div class="row">
             <div class="col-md-12">
+                <h3 class="breadcrumb-header">Manage Account</h3>
                 <ul class="breadcrumb-tree">
-                    <li><a href="~/Home/Index" title="Home">Home</a></li>
-                    <li>   <a href="/Manage" title="Manage">Manage Account</a></li>
-                    <li class="active">Change Password</li>
-
-
+                    <li><a href="~/Home/Index">Home</a></li>
+                    <li class="active">Account</li>
                 </ul>
-
 
                 <ul class="breadcrumb-tree pull-right">
                     <li> <a href="~/Home/Index" title="Home">Back to Home</a></li>
-
-
-
                 </ul>
             </div>
         </div>
@@ -47,12 +28,11 @@
     <!-- /container -->
 </div>
 <!-- /BREADCRUMB -->
-
-
-
+<!-- SECTION -->
 <div class="section">
     <!-- container -->
     <div class="container">
+        <!-- row -->
         <div class="row">
             <div class="col-md-8">
                 <h2>@ViewBag.Title.</h2>
@@ -90,10 +70,12 @@
 
             </div>
         </div>
-   </div>
+        <!-- /row -->
+    </div>
+    <!-- /container -->
+
 </div>
-
-
+<!-- /SECTION -->
 
 
 @section Scripts {
