--- a/AspMVCECommerce/Views/Shared/_Layout.cshtml
+++ b/AspMVCECommerce/Views/Shared/_Layout.cshtml
@@ -433,9 +433,28 @@
                         <div class="footer">
                             <h3 class="footer-title">Service</h3>
                             <ul class="footer-links">
-                                <li><a href="#">My Account</a></li>
-                                <li><a href="#">View Cart</a></li>
-                                <li><a href="#">Wishlist</a></li>
+                                <li><a href="~/Manage">My Account</a></li>
+
+
+                                @if (Request.IsAuthenticated)
+                                {
+                                    if (User.IsInRole("Customer"))
+                                    {
+                                        <li><a href="~/Home/ShoppingCart">View Cart</a></li>
+                                        <li><a href="~/Home/WishList">Wishlist</a></li>
+                                    }
+                                    else
+                                    {
+                                        <li><a href="~/Account/Login">View Cart</a></li>
+                                        <li><a href="~/Account/Login">Wishlist</a></li>
+                                    }
+                                }
+                                else
+                                {
+                                    <li><a href="~/Account/Login">View Cart</a></li>
+                                    <li><a href="~/Account/Login">Wishlist</a></li>
+                                }
+
                                 <li><a href="#">Track My Order</a></li>
                                 <li><a href="#">Help</a></li>
                             </ul>
