--- a/AspMVCECommerce/Views/Shared/_LoginPartial.cshtml
+++ b/AspMVCECommerce/Views/Shared/_LoginPartial.cshtml
@@ -25,7 +25,7 @@
                 </li>
             }
 
-            <li><a href="#"><i class="fa fa-user-o"></i> Hello @User.Identity.GetUserName()!</a></li>
+            <li><a href="~/Manage"><i class="fa fa-user-o"></i> Hello @User.Identity.GetUserName()!</a></li>
             <li><a href="javascript:document.getElementById('logoutForm').submit()"><i class="glyphicon glyphicon-log-out"></i>Log off</a></li>
         </ul>
     }
